--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
-  port: 8082
+  port: 8087
   servlet:
-    context-path: /customerservice
+    context-path: /orderservice
 
 spring:
   datasource:
@@ -19,4 +19,4 @@ spring:
         format_sql: true
     show-sql: true
 users:
-  url: http://localhost:8087/orderservice/getOrder/
+  url: http://localhost:8082/customerservice/getCustomer/orderId/
